# lib_izmiran.py

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
src/: datfile.py
test/integration_py/: test_int_datfile.py
test/unit_py/: test_unit_datfile.py
