[project]
name = "izmiran"
version = "0.1.0"
description = "IZMIRAN libraries"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Danil Borchevkin", email = "danil.borchevkin@gmail.com"},
]

classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: BSD 2-Clause License",
  "Programming Language :: Python :: 3",
]

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "test/unit_py/",
    "test/integration_py/",
]